-------------------------------------------------------------------------------
$Id: NEWS,v 1.46 1994/10/27 01:24:04 gray Exp $
-------------------------------------------------------------------------------

Version 3.0.3:

	* Removed the log-error tag.  If logfile set then errors are logged.
	* Fixed problem with new args clearing all old ones.
	* Added dmalloc.h.2 creation to config.status file.
	* Added a startup message with the debug flags used to logfile.
	* Fixed errors with FUNC_CHECK code.
	* Added default tags: default,low,medium,high,all to dmalloc.
	* Renamed 'check-free' token to 'check-blank'.
	* Made many changes to make it easier to get running with dmalloc.
	* Added long(-L)/short(-S) options to output debug-tokens in env.
	* Changed some dmalloc options:
		* -T (list-tokens) -> -D (debug-tokens)
		* -L (list-tags) -> -t (list-tags)
	* Added better error logging in chunk.
	* Added DG/UX code to return.h and atexit.c to contrib.

Version 3.0.2:

	* Fixed strtok error in dmallocrc file processing.
	* Fixed problems with env code when sprintf doesn't returns int.
	* Library now dumps the proper fence-bottom bytes on 1st pointer error.
	* Fixed casting problems on OSF.

Version 3.0.1:

	* Combined all env variables into DMALLOC_OPTIONS.
	* Added -n flag to dmalloc program for printing/not-doing actions.
	* Fixed zsh and [t]csh alias messages in documentation.
	# Added mkinstalldirs and install.sh to distribution.
	* Renamed _dmalloc_error to dmalloc_error.
	* Removed time() and getpid() from compat functions.
	* Changed DMALLOC_DEBUG_DISABLE flag to DMALLOC_DISABLE.
	* Fixed some include file auto-include messages.

Version 3.0.0:

	* Fixed a problem with some list checking.
	* Fixed possible recursion problem.
	* Tons of name changes going from malloc_dbg -> dmalloc.

Version 2.2.1:

	* Small fix to malloc_dbg.3 to remove IMPORT's.

Version 2.2.0:

	* Fixed xmalloc,xrealloc,etc. override functions.
	* Added xstrdup to the x override function list.