@@ -1,6 +1,6 @@
 ###############################################################################
 # Makefile for the DMalloc library.
-# $Id: Makefile.all.in,v 1.49 1994/10/18 23:55:07 gray Exp $
+# $Id: Makefile.all.in,v 1.50 1994/11/03 22:26:14 gray Exp $
 ###############################################################################
 
 # default root installation directory
@@ -22,7 +22,9 @@ DEFS =
 INCS = -I. -I$(srcdir)
 LIBS = @LIBS@
 
-LIBRARY	= libdmalloc.a
+LIBRARY	= libdmalloc.a  
+# library with dmalloc disabled
+LIB_DIS	= libdmalloclp.a  
 UTIL = dmalloc
 INFOFILE = dmalloc.info
 
@@ -42,18 +44,17 @@ SHELL = /bin/sh
 
 HFLS = dmalloc.h
 OBJS = arg_check.o chunk.o compat.o dmalloc_lp.o env.o error.o heap.o malloc.o
-OBJS_IN = dmalloc_lp.o
 
 CFLAGS = $(CCFLAGS)
 TEST = dmalloc_t
 
 # .PHONY : all
-all : $(LIBRARY) $(UTIL)
+all : $(LIBRARY) $(LIB_DIS) $(UTIL)
 
 # .PHONY : clean
 clean :
 	rm -f a.out core *.o *.t
-	rm -f $(LIBRARY) $(TEST) $(UTIL) dmalloc.h
+	rm -f $(LIBRARY) $(LIB_DIS) $(TEST) $(UTIL) dmalloc.h
 
 # .PHONY : clobber
 clobber : clean
@@ -75,10 +76,11 @@ installincs : $(HFLS)
 	$(INSTALL_DATA) $(HFLS) $(incdir)
 
 # .PHONY : installlib
-installlib : installincs $(LIBRARY) $(OBJS_IN) $(INFOFILE)
+installlib : installincs $(LIBRARY) $(LIB_DIS) $(INFOFILE)
 	$(INSTALL_DATA) $(LIBRARY) $(libdir)
 	@RANLIB@ $(libdir)/$(LIBRARY)
-	$(INSTALL_DATA) $(OBJS_IN) $(libdir)
+	$(INSTALL_DATA) $(LIB_DIS) $(libdir)
+	@RANLIB@ $(libdir)/$(LIB_DIS)
 	$(INSTALL_DATA) $(srcdir)/$(INFOFILE) $(infodir)
 
 # .PHONY : install
@@ -96,7 +98,10 @@ dmalloc.h : dmalloc.h.1 dmalloc.h.2 dmalloc.h.3
 $(LIBRARY) : $(OBJS)
 	ar cr $(LIBRARY) $?
 	@RANLIB@ $@
-	- chmod 660 $@
+
+$(LIB_DIS) : dmalloc_lp.o
+	ar cr $(LIB_DIS) $?
+	@RANLIB@ $@
 
 $(UTIL) : $(UTIL).o argv.o compat.o env.o
 	rm -f $@
